--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="A simple, retro theme for Hugo" />
+<meta name="description" content="Thought I was dead? Hah! Too bad!" />
 <meta name="keywords" content="" />
 
   <meta name="robots" content="noodp" />
@@ -79,7 +79,7 @@
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Dante&#39;s blog">
-<meta property="og:description" content="A simple, retro theme for Hugo" />
+<meta property="og:description" content="Thought I was dead? Hah! Too bad!" />
 <meta property="og:url" content="/" />
 <meta property="og:site_name" content="Dante&#39;s blog" />
 
